<resources>

    <!-- Title Screen-->
    <string name="app_name">CheckPoint</string>
    <string name="app_description">Create flash cards and track your revision progress with CheckPoint!</string>
    <string name="button_send">Begin</string>

    <!-- Subject Select Screen-->
    <string name="subject_select_title">Select a Subject</string>
    <string name="add_subject_btn">Add Subject</string>

    <!-- Create Subject Screen-->
    <string name="title_activity_add_subject">AddSubject</string>
    <string name="add_subject_title">Create a new Subject</string>
    <string name="title_prompt">Subject Title</string>
    <string name="save_subject_btn">Add Cards</string>

    <!-- Subject Overview-->
    <string name="title_activity_subject_overview">SubjectOverview</string>
    <string name="add_card_btn">Add a Card</string>
    <string name="view_card_prompt">View Cards</string>
    <string name="edit_subject">Edit Subject</string>
    <string name="start_quiz_btn">Start a Quiz</string>

    <!-- Create Card-->
    <string name="create_card_title">Create a Card!</string>
    <string name="card_title">Card name</string>
    <string name="question_prompt">Enter a question</string>
    <string name="answer_prompt">Enter an answer</string>
    <string name="difficulty_prompt">How difficult is the question?</string>
    <string name="save_card_btn">Save Card</string>

    <!-- Misc-->
    <string name="edit_message">Enter a Message</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_subject_select">Select Subject</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_add_card">Add a Card</string>
    <string name="title_activity_card_overview">Card Overview</string>
    <string name="title_activity_start_quiz">Start Quiz</string>
    <string name="title_activity_play_quiz">Quiz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_quiz_results">QuizResults</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_view_quiz_results">View Quiz Results</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_subject_list">Your Subjects</string>
    <string name="title_activity_subject_results">SubjectResults</string>
    <string name="title_activity_new_subject">NewSubject</string>
    <string name="title_activity_view_subject">ViewSubject</string>
    <string name="title_activity_view_card">ViewCard</string>
    <string name="title_activity_quiz_type">QuizType</string>
    <string name="title_activity_card_add">CardAdd</string>
    <string name="title_activity_view_all_results">ViewAllResults</string>
    <string name="title_activity_choose_quiz">ChooseQuiz</string>
</resources>
