<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uk.ac.ncl.djwelsh.checkpoint.AddCard"
    tools:showIn="@layout/activity_add_card"
    android:padding="15dp"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_card_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:textSize="38dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/card_overview_question"
        android:background="@drawable/main_button_box"
        android:layout_above="@+id/textView3"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/answer_prompt"
        android:id="@+id/textView3"
        android:textColor="@color/colorWhite"
        android:layout_above="@+id/card_answer"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/card_answer"
        android:background="@drawable/main_button_box"
        android:layout_alignBaseline="@+id/save_card"
        android:layout_alignBottom="@+id/save_card"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Choose a difficulty"
        android:id="@+id/textView4"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/card_answer"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/card_difficulty"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_card_btn"
        android:id="@+id/save_card"
        android:textColor="@color/colorAccent"
        android:background="@drawable/main_button_box"
        android:padding="15dp"
        android:onClick="saveCard"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/card_difficulty"
        android:layout_toStartOf="@+id/card_counters" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Question"
        android:id="@+id/textView2"
        android:layout_above="@+id/card_overview_question"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorWhite" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_title"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:autoText="false"
        android:background="@drawable/main_button_box"
        android:minHeight="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Name"
        android:id="@+id/textView5"
        android:layout_above="@+id/card_title"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorWhite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Card 1"
        android:id="@+id/card_counters"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/card_difficulty"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Finish "
        android:id="@+id/finish_cards"
        android:textColor="@color/colorAccent"
        android:background="@drawable/main_button_box"
        android:padding="15dp"
        android:onClick="finishDeck"
        android:layout_alignTop="@+id/save_card"
        android:layout_alignEnd="@+id/card_difficulty"
        android:layout_toEndOf="@+id/card_counters" />
</RelativeLayout>
